# music-bot

./: commands.json  config.json  pyproject.toml  requirements.txt
