[tool.poetry]
name = "repl_python3_beta_replit"
version = "0.1.0"
description = ""
authors = ["nox31monss001 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
replit = "^3.2.4"
Flask = "^2.0.3"
aiohttp = "^3.8.1"
gTTS = "^2.2.4"
wavelink = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
